@@ -133,6 +133,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Objective C            M. Uli Kusterer
 - Ocaml                  Flaie
 - Ocaml-brief            Flaie
+- OpenBSD Packet Filter  David Berard
 - OpenOffice.org BASIC   Roberto Rossi
 - Oracle 8               Guy Wicks
 - Oracle 11i             Simon Redhead
