@@ -17,6 +17,7 @@ Version 1.0.8.7
      * Autoconf (Mihai Vasilian)
      * ECMAScript (Michel Mariani)
      * J (Ric Sherlock)
+     * OpenBSD Packet Filter (David Berard)
      * Oxygene / Delphi Prism (Carlo Kok)
   -  Minor change in INT_BASIC number regexp to support '..' range operator
      as to be found in most Pascal-like languages (BenBE)
